--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,6 +39,9 @@ layout: compress
                          Posts
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/courses">
+                         Courses
+                         </a>
+                         <a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
                          </a>
                  </h3>
