--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -16,11 +16,14 @@ layout: compress
         <div class="wrapper animated fadeIn">
             <div class="content">
                 <div class="post-title">
-                    <h1>{{ page.title }}</h1>
+                    <h1>{{ page.title }}</h1> 
                     <a class="btn zoombtn" href="{{site.url}}">
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
+
+                I prov
+
                 <div class="post-list">
                     {% for post in site.posts %} 
                         {% if post.courses %}
