--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -22,8 +22,12 @@ layout: compress
                     </a>
                 </div>
 
-                I prov
+                <p>I teach <b>Python Coding</b> and <b>Machine Learning</b> for corporate and individuals. </p>
 
+                <p>I have provided trainings for these companies: </p>
+
+                <img src='/assets/img/spdbank.png'>
+                
                 <div class="post-list">
                     {% for post in site.posts %} 
                         {% if post.courses %}
