--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -24,9 +24,20 @@ layout: compress
 
                 <p>I teach <b>Python Coding</b> and <b>Machine Learning</b> for corporate and individuals. </p>
 
-                <p>I have provided trainings for these companies: </p>
+                <p>I have previously worked with trainings for these companies: </p>
 
-                <img src='/assets/img/spdbank.png'>
+                <div class="row">
+                  <div class="column">
+                    <img src="/assets/img/spdbank.png" alt="Snow" style="width:100%">
+                  </div>
+                  <div class="column">
+                    <img src="/assets/img/spdbank.png" alt="Forest" style="width:100%">
+                  </div>
+                  <div class="column">
+                    <img src="/assets/img/spdbank.png" alt="Mountains" style="width:100%">
+                  </div>
+                </div>
+
                 
                 <div class="post-list">
                     {% for post in site.posts %} 
