--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,6 +15,7 @@ sitemap: false
 @import "variables";
 @import "mixins";
 @import "normalize";
+@import "tables";
 @import "site";
 @import "typography";
 @import "elements";
