--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -28,13 +28,25 @@ layout: compress
 
                 <div class="row">
                   <div class="column">
-                    <img src="/assets/img/spdbank.png" alt="Snow" style="width:100%">
+                    <img src="/assets/img/spdbank.png" alt="spdbank" style="width:100%">
                   </div>
                   <div class="column">
-                    <img src="/assets/img/spdbank.png" alt="Forest" style="width:100%">
+                    <img src="/assets/img/metis.png" alt="metis" style="width:100%">
                   </div>
                   <div class="column">
-                    <img src="/assets/img/spdbank.png" alt="Mountains" style="width:100%">
+                    <img src="/assets/img/kaplan.png" alt="kaplan" style="width:100%">
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="column">
+                    <img src="/assets/img/amity.png" alt="amity" style="width:100%">
+                  </div>
+                  <div class="column">
+                    <img src="/assets/img/tribe.png" alt="tribe" style="width:100%">
+                  </div>
+                  <div class="column">
+                    <img src="" alt="" style="width:100%">
                   </div>
                 </div>
 
