--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -28,13 +28,13 @@ layout: compress
 
                 <div class="row">
                   <div class="column">
-                    <img src="/assets/img/spdbank.png" alt="spdbank" style="width:100%">
+                    <img src="/assets/img/spdbank.png" alt="spdbank" width="500">
                   </div>
                   <div class="column">
-                    <img src="/assets/img/metis.png" alt="metis" style="width:100%">
+                    <img src="/assets/img/metis.png" alt="metis" width="500">
                   </div>
                   <div class="column">
-                    <img src="/assets/img/kaplan.png" alt="kaplan" style="width:100%">
+                    <img src="/assets/img/kaplan.png" alt="kaplan" width="500">
                   </div>
                 </div>
 
