--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -22,32 +22,48 @@ layout: compress
                     </a>
                 </div>
 
-                <p>I teach <b>Python Coding</b> and <b>Machine Learning</b> for corporate and individuals. </p>
+                <p>Other than doing data science, I also provide the following services for corporate and individual customers:
+                <ul>
+                  <li>Python Coding and Machine Learning Training (Scroll down for more)</li>
+                  <li>Course Mapping for Government Funding</li>
+                  <li>Career Workshops</li>
+                </ul>
 
-                <p>I have previously worked with trainings for these companies: </p>
+                <p>I have previously worked with these companies: </p>
 
                 <div class="row">
                   <div class="column">
-                    <img src="/assets/img/spdbank.png" alt="spdbank" width="500">
+                    <a href='https://www.spdb.com.cn/'>
+                        <img src="/assets/img/spdbank.png" alt="spdbank" width="500">
+                    </a>
                   </div>
                   <div class="column">
-                    <img src="/assets/img/metis.png" alt="metis" width="500">
+                    <a href='https://www.thisismetis.com/'>
+                        <img src="/assets/img/metis.png" alt="metis" width="500">
+                    </a>
                   </div>
                   <div class="column">
-                    <img src="/assets/img/kaplan.png" alt="kaplan" width="500">
+                    <a href='https://www.kaplan.com.sg/'>
+                        <img src="/assets/img/kaplan.png" alt="kaplan" width="500">
+                    </a>
                   </div>
                 </div>
 
                 <div class="row">
                   <div class="column">
-                    <img src="/assets/img/amity.png" alt="amity" style="width:100%">
+                    <a href='http://www.amitysingapore.sg/'>
+                        <img src="/assets/img/amity.png" alt="amity" width="500">
+                    </a>
                   </div>
                   <div class="column">
-                    <img src="/assets/img/tribe.png" alt="tribe" style="width:100%">
+                    <a href='https://tribeaccelerator.co/'>
+                        <img src="/assets/img/tribe.png" alt="tribe" width="500">
+                    </a>
                   </div>
                   <div class="column">
-                    <img src="" alt="" style="width:100%">
-                  </div>
+                    <a href='https://www.singaporetech.edu.sg/'>
+                        <img src="/assets/img/sit.png" alt="sit" width="500">
+                    </a>
                 </div>
 
                 
