--- a/_sass/tables.scss
+++ b/_sass/tables.scss
@@ -1,8 +1,8 @@
-//.row {
-//  display: flex;
-//}
+.row {
+  display: flex;
+}
 
-//.column {
-//  flex: 33.33%;
-//  padding: 30px;
-//}
+.column {
+  flex: 33.33%;
+  padding: 30px;
+}
