--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -8,6 +8,17 @@ layout: compress
 <!--[if gt IE 8]><!--> <html class="no-js"><!--<![endif]-->
 <head>
     {% include head.html %}
+    <style>
+    .row {
+      display: flex;
+    }
+
+    /* Create three equal columns that sits next to each other */
+    .column {
+      flex: 33.33%;
+      padding: 30px;
+    }
+    </style>
 </head>
 <body>
     {% include nav.html %}
