--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -30,36 +30,36 @@ layout: compress
 
                 <p>I have previously worked with these companies: </p>
 
-                <div class="row">
-                  <div class="column">
+                <div>
+                  <div>
                     <a href='https://www.spdb.com.cn/'>
                         <img src="/assets/img/spdbank.png" alt="spdbank" width="500">
                     </a>
                   </div>
-                  <div class="column">
+                  <div>
                     <a href='https://www.thisismetis.com/'>
                         <img src="/assets/img/metis.png" alt="metis" width="500">
                     </a>
                   </div>
-                  <div class="column">
+                  <div>
                     <a href='https://www.kaplan.com.sg/'>
                         <img src="/assets/img/kaplan.png" alt="kaplan" width="500">
                     </a>
                   </div>
                 </div>
 
-                <div class="row">
-                  <div class="column">
+                <div>
+                  <div>
                     <a href='http://www.amitysingapore.sg/'>
                         <img src="/assets/img/amity.png" alt="amity" width="500">
                     </a>
                   </div>
-                  <div class="column">
+                  <div>
                     <a href='https://tribeaccelerator.co/'>
                         <img src="/assets/img/tribe.png" alt="tribe" width="500">
                     </a>
                   </div>
-                  <div class="column">
+                  <div>
                     <a href='https://www.singaporetech.edu.sg/'>
                         <img src="/assets/img/sit.png" alt="sit" width="500">
                     </a>
