--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -7,7 +7,6 @@
 	font-size: 100%;
 }
 
-
 html {
 	@extend %extend1;
 }
@@ -219,4 +218,13 @@ header .entry-meta {
         background-blend-mode: multiply;
         background-position: center center;
     }
+}
+
+.row_course {
+  display: flex;
+}
+
+.column_course {
+  flex: 33.33%;
+  padding: 30px;
 }
