--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -31,36 +31,36 @@ layout: compress
 
                 <p>I have previously worked with these companies: </p>
 
-                <div class="row_course">
-                  <div class="column_course">
+                <div class="rowcourse">
+                  <div class="columncourse">
                     <a href='https://www.spdb.com.cn/'>
                         <img src="/assets/img/spdbank.png" alt="spdbank" width="500">
                     </a>
                   </div>
-                  <div class="column_course">
+                  <div class="columncourse">
                     <a href='https://www.thisismetis.com/'>
                         <img src="/assets/img/metis.png" alt="metis" width="500">
                     </a>
                   </div>
-                  <div class="column_course">
+                  <div class="columncourse">
                     <a href='https://www.kaplan.com.sg/'>
                         <img src="/assets/img/kaplan.png" alt="kaplan" width="500">
                     </a>
                   </div>
                 </div>
 
-                <div class="row_course">
-                  <div class="column_course">
+                <div class="rowcourse">
+                  <div class="columncourse">
                     <a href='http://www.amitysingapore.sg/'>
                         <img src="/assets/img/amity.png" alt="amity" width="500">
                     </a>
                   </div>
-                  <div class="column_course">
+                  <div class="columncourse">
                     <a href='https://tribeaccelerator.co/'>
                         <img src="/assets/img/tribe.png" alt="tribe" width="500">
                     </a>
                   </div>
-                  <div class="column_course">
+                  <div class="columncourse">
                     <a href='https://www.singaporetech.edu.sg/'>
                         <img src="/assets/img/sit.png" alt="sit" width="500">
                     </a>
