--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -220,11 +220,11 @@ header .entry-meta {
     }
 }
 
-.row_course {
+.rowcourse {
   display: flex;
 }
 
-.column_course {
+.columncourse {
   flex: 33.33%;
   padding: 30px;
 }
