--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -231,3 +231,14 @@ header .entry-meta {
 	height: 500px;
 	position: relative;
 }
+
+img{  
+    max-height: 100%;  
+    max-width: 100%; 
+    position: absolute;  
+    top: 0;  
+    bottom: 0;  
+    left: 0;  
+    right: 0;  
+    margin: auto;
+}
