--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -22,7 +22,7 @@ layout: compress
                     </a>
                 </div>
 
-                <p>Other than doing data science, I also provide the following services for corporate and individual customers:
+                <p>Other than doing data science, I also provide the following services for corporate and individual customers:</p>
                 <ul>
                   <li>Python Coding and Machine Learning Training (Scroll down for more)</li>
                   <li>Course Mapping for Government Funding</li>
@@ -67,7 +67,7 @@ layout: compress
                     </a>
                 </div>
 
-                <br><br><br><br>
+                <p>Other than doing data science, I also provide the following services for corporate and individual customers:</p>
                 
                 <ul>
                   <li>Python for Professionals: Introductory Python Coding course with no pre-requisites. [Click for Brochure](/assets/doc/python_professionals.pdf)</li>
