--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -67,16 +67,18 @@ layout: compress
                     </a>
                 </div>
 
-                <p>Other than doing data science, I also provide the following services for corporate and individual customers:</p>
+                <div>
+                    
+                    <p>Other than doing data science, I also provide the following services for corporate and individual customers:</p>
+                    
+                    <ul>
+                      <li>Python for Professionals: Introductory Python Coding course with no pre-requisites. [Click for Brochure](/assets/doc/python_professionals.pdf)</li>
+                      <li>Course Mapping for Government Funding</li>
+                      <li>Course Material Creation</li>
+                      <li>Career Workshops</li>
+                    </ul>
                 
-                <ul>
-                  <li>Python for Professionals: Introductory Python Coding course with no pre-requisites. [Click for Brochure](/assets/doc/python_professionals.pdf)</li>
-                  <li>Course Mapping for Government Funding</li>
-                  <li>Course Material Creation</li>
-                  <li>Career Workshops</li>
-                </ul>
-                
-
+                </div>
             </div>
         </div>
     </header>
