--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -70,9 +70,8 @@ layout: compress
                 <div class="post-list">
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
-                            <p>{{ post.excerpt }}</p>
-                            <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Read More</a>
+                            <a class="zoombtn" href="/assets/doc/python_professionals.pdf">Python for Professionals</a>
+                            <p>Introductory Python Coding course with no pre-requisites.</p>
                         </li>
                     </ul>
                     <ul>
