--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -30,22 +30,24 @@ layout: compress
                   <li>Career Workshops</li>
                 </ul>
 
+                <p><h1>All Courses and Trainings:</h1></p>
+
                 <div class="post-list">
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="/assets/doc/python_professionals.pdf">Python for Professionals</a>
+                            <a class="zoombtn" href="/assets/doc/python_professionals.pdf">1. Python for Professionals</a>
                             <p>Introductory Python Coding course with no pre-requisites.</p>
                         </li>
                     </ul>
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="/assets/doc/python_professionals.pdf">Python for Professionals</a>
+                            <a class="zoombtn" href="/assets/doc/python_professionals.pdf">2. Python for Professionals</a>
                             <p>Introductory Python Coding course with no pre-requisites.</p>
                         </li>
                     </ul>
                 </div>
 
-                <p>I have previously worked with these companies: </p>
+                <p><h1>I have previously worked with these companies: </h1></p>
 
                 <div class="rowcourse">
                   <div class="columncourse">
