--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -43,8 +43,8 @@ layout: compress
                     </ul>
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="/assets/doc/python_professionals.pdf">2. Python for Professionals</a>
-                            <p>Introductory Python Coding course with no pre-requisites.</p>
+                            <a class="zoombtn" href="/assets/doc/datascience_training.pdf">2. Data Science Training</a>
+                            <p>Data Science Training for all levels. Will be customized based on company's or team's needs.</p>
                         </li>
                     </ul>
                 </div>
