--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -24,7 +24,7 @@ layout: compress
 
                 <p>Other than doing data science, I also provide the following services for corporate and individual customers:</p>
                 <ul>
-                  <li>Python Coding and Machine Learning Training (Scroll down for more)</li>
+                  <li>Python Coding and Machine Learning Training (See below)</li>
                   <li>Course Mapping for Government Funding</li>
                   <li>Course Material Creation</li>
                   <li>Career Workshops</li>
@@ -37,13 +37,13 @@ layout: compress
                 <div class="post-list">
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="/assets/doc/python_professionals.pdf">1. Python for Professionals</a>
+                            <a class="zoombtn" href="/assets/doc/python_professionals.pdf">1. Python for Professionals [Click for more]</a>
                             <p>Introductory Python Coding course with no pre-requisites.</p>
                         </li>
                     </ul>
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="/assets/doc/datascience_training.pdf">2. Data Science Training</a>
+                            <a class="zoombtn" href="/assets/doc/datascience_training.pdf">2. Data Science Training [Click for more]</a>
                             <p>Data Science Training for all levels. Will be customized based on company's or team's needs.</p>
                         </li>
                     </ul>
