updated course page

--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -51,7 +51,7 @@ layout: compress
 
                 <hr>
 
-                <p><h1>I have previously worked with these companies: </h1></p>
+                <p><h1>I am currently or previously worked with these companies: </h1></p>
 
                 <div class="rowcourse">
                   <div class="columncourse">
