--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
         <a href="/#benefits" class="text-xs md:text-base text-gray-600 hover:text-gray-900">Why Work With Me?</a>
         <a href="/#services" class="text-xs md:text-base text-gray-600 hover:text-gray-900">Services</a>
         <a href="/#testimonials" class="text-xs md:text-base text-gray-600 hover:text-gray-900">Testimonials</a>
+        <a href="/#contact" class="text-xs md:text-base text-gray-600 hover:text-gray-900">Contact</a>
       </div>
       <div class="md:hidden">
         <button id="menu-btn" class="hamburger focus:outline-none">
@@ -31,6 +32,7 @@
       <a href="/#benefits" class="text-gray-600 hover:text-gray-900">Why Work With Me?</a>
       <a href="/#services" class="text-gray-600 hover:text-gray-900">Services</a>
       <a href="/#testimonials" class="text-gray-600 hover:text-gray-900">Testimonials</a>
+      <a href="/#contact" class="text-gray-600 hover:text-gray-900">Contact</a>
     </div>
   </header>
 
